font sizes modified

--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,25 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Elevate your online presence with cutting-edge website design & development. Convert visitors, grow your business."
     />
+    <meta name="description" content="Craft your dream website with our expert developers. Boost traffic, conversions, and brand image with modern website design & development. Get a free quote today!" />
+    <meta name="description" content="Unleash your brand's potential with a powerful logo design. Our experienced designers create memorable logos that resonate with your audience. Contact us for a custom logo!" />
+    <meta name="description" content="Increase sales & customer satisfaction with our e-commerce development expertise. Build a user-friendly, high-converting online store that drives growth. Talk to our specialists!" />
+    <meta name="description" content="Engage your audience with innovative mobile apps built by our experts. We design & develop high-performing apps for iOS & Android. Get a free consultation today!" />
+    <meta name="keywords" content="web development, web design, mobile app development, e-commerce development, SEO services, digital marketing, branding, websites, apps, software development, custom development,create website, build website, website redesign, responsive website, SEO website, mobile app, e-commerce store, online marketing, digital strategy, brand identity, web solutions, [your agency name]"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/vbb.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka&family=Rubik+Moonrocks&display=swap"
+      rel="stylesheet"
+    />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -44,6 +51,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://kit.fontawesome.com/0b20950690.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/0b20950690.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
